k8s/psa/resources/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route-default
  namespace: consul
spec:
  parentRefs:
    - name: api-gateway
  rules: 
    - backendRefs:
      - kind: Service
        name: frontend
        namespace: frontend
        port: 8080

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: service-grant
  namespace: frontend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: consul
  to:
  - group: ""
    kind: Service
    name: frontend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route-default-2
  namespace: default
spec:
  parentRefs:
    - name: api-gateway-default
  rules: 
    - backendRefs:
      - kind: Service
        name: frontend
        namespace: frontend
        port: 8080
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: service-grant-2
  namespace: frontend
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    namespace: default
  to:
  - group: ""
    kind: Service
    name: frontend
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: secret-grant-2
  namespace: consul
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: default
  to:
  - group: ""
    kind: Secret
